--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="navs">
-            <a href="home.html" class="present">Home</a>
+            <a href="index.html" class="present">Home</a>
             <a href="About.html">Profile</a>
             <a href="Skills.html">Skills</a>
             <a href="myworks.html">My Works</a>
