--- a/myworks.html
+++ b/myworks.html
@@ -16,7 +16,7 @@
                         <h6><em>...If you can dream it, I can build it...</em></6>
                 </div>
                 <div class="navs">
-                        <a href="home.html">Home</a>
+                        <a href="index.html">Home</a>
                         <a href="About.html">Profile</a>
                         <a href="Skills.html">Skills</a>
                         <a href="myworks.html" class="present">My Works</a>
