--- a/skills.html
+++ b/skills.html
@@ -18,7 +18,7 @@
                 </div>
         
                 <div class="navs">
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="About.html">Profile</a>
                     <a href="Skills.html" class="present">Skills</a>
                     <a href="myworks.html">My Works</a>
