--- a/About.html
+++ b/About.html
@@ -16,7 +16,7 @@
                     <h6><em>...If you can dream it, I can build it...</em></6>
             </div>
             <div class="navs">
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="About.html" class="present">Profile</a>
                     <a href="Skills.html">Skills</a>
                     <a href="myworks.html">My Works</a>
@@ -42,7 +42,7 @@
         <p><strong>Birthday: </strong><span>1st August</span></p>
         <p><strong>Nationality: </strong><span>Nigerian</span></p>
         <p><strong>Marital Status: </strong><span>Single</span></p>
-        <p><strong>Educational Status: </strong><span>Agricultural Science<br> Undergraduate at University of Ilorin, Nigeria.</span></p>
+        <p><strong>Educational Status: </strong><span>Second Year<br> Undergraduate at University of Ilorin, Nigeria.</span></p>
         <p><strong>Languages Spoken: </strong></p>
         <ol type="i">
             <li>ENGLISH: <span>Advanced</span></li>
